@@ -1,5 +1,7 @@
 2007-07-29  Ales Hakl  <ales at hakl dot net>
 
+	* src/dfsch.c (dfsch_zip): zip function (transposition of nested lists)
+
 	* src/format.c: simple future-proof format implementation,
 	currently supporting ~a, ~s and ~*
 
